add nasek section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home"><i class="fa-solid fa-house-chimney" aria-hidden="true"></i>الرئيسية</a></li>
                 <li><a href="#programs"><i class="fa-solid fa-list-check" aria-hidden="true"></i>برامجنا</a></li>
-                <li><a href="#about"><i class="fa-solid fa-circle-info" aria-hidden="true"></i>من نحن</a></li>
+                <li><a href="manasek.html" aria-label="مناسك العمرة"><i class="fa-solid fa-kaaba" aria-hidden="true"></i>مناسك العمرة</a></li>
                 <li><a href="#contact"><i class="fa-solid fa-phone" aria-hidden="true"></i>تواصل معنا</a></li>
             </ul>
             <button class="menu-toggle" id="menuToggle">☰</button>
@@ -69,30 +69,30 @@
     
             </div>
 
-            <p class="section-note">اطّلع على خدماتنا واختر الأنسب لرحلتك.</p>
+            <p class="section-note">اطّلع على خدم واختر الأنسب لرحلتك.</p>
 
             <div class="features-grid features-cards">
                 <div class="feature-card">
-                    <h3 class="feature-title">أفخم الباصات</h3>
                     <div class="feature-figure"><img src="images/bus.jpeg" alt="أفخم الباصات" class="feature-image feature-image--wide"></div>
+                    <h3 class="feature-title">أفخم الباصات</h3>
                     <p class="feature-desc">باصات حديثة مجهّزة لضمان راحة وسلامة المعتمرين.</p>
                 </div>
 
                 <div class="feature-card">
-                    <h3 class="feature-title">أفخم الفنادق</h3>
                     <div class="feature-figure"><img src="images/hotel.jpeg" alt="أفخم الفنادق" class="feature-image feature-image--wide"></div>
+                    <h3 class="feature-title">أفخم الفنادق</h3>
                     <p class="feature-desc">إقامة راقية بالقرب من الحرم مع خدمات متميزة للمعتمرين.</p>
                 </div>
 
                 <div class="feature-card">
-                    <h3 class="feature-title">أفضل الأسعار</h3>
                     <div class="feature-figure"><img src="images/cash.jpg" alt="أفضل الأسعار" class="feature-image"></div>
+                    <h3 class="feature-title">أفضل الأسعار</h3>
                     <p class="feature-desc">باقات شفافة وقيمة عالية تناسب مختلف الميزانيات.</p>
                 </div>
 
                 <div class="feature-card">
-                    <h3 class="feature-title">التزام بالمواعيد</h3>
                     <div class="feature-figure"><img src="images/clock-icon.jpg" alt="التزام بالمواعيد" class="feature-image"></div>
+                    <h3 class="feature-title">التزام بالمواعيد</h3>
                     <p class="feature-desc">تنسيق وتشغيل دقيق يضمن الالتزام بالمواعيد وسلاسة التنفيذ.</p>
                 </div>
             </div>
